SUBDIRS = python php5 java

EXTRA_DIST = bindings.py \
	lang_java.py \
	lang_java_wrapper_bottom.c \
	lang_java_wrapper_top.c \
	lang_python.py \
	lang_python_wrapper_bottom.c \
	lang_python_wrapper_top.c \
	lang_php5.py \
	overrides.xml \
	utils.py \
	lang_php5_helpers/wrapper_source_top.c \
	lang_php5_helpers/__init__.py \
	lang_php5_helpers/php_code.py \
	lang_php5_helpers/wrapper_header.py \
	lang_php5_helpers/wrapper_source.py \
	utility-scripts/error-analyzer.pl \
	ghashtable.h

